--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doable",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,7 +20,10 @@
     "@angular/router": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "bootstrap": "5.2.3",
+    "@ngrx/store": "15.4.0",
+    "@ngrx/entity": "15.4.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.3",
@@ -33,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "@ngrx/store-devtools": "15.4.0"
   }
 }
