--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "zone.js": "~0.12.0",
     "bootstrap": "5.2.3",
     "@ngrx/store": "15.4.0",
-    "@ngrx/entity": "15.4.0"
+    "@ngrx/entity": "15.4.0",
+    "@ngneat/until-destroy": "9.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.3",
