--- a/package.json
+++ b/package.json
@@ -3,41 +3,73 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "nx serve",
+    "serve:all": "concurrently \"npm run start\" \"npm run serve:api\"",
+    "serve:api": "node server/server.js",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/animations": "^16.0.3",
+    "@angular/common": "^16.0.3",
+    "@angular/compiler": "^16.0.3",
+    "@angular/core": "^16.0.3",
+    "@angular/forms": "^16.0.3",
+    "@angular/platform-browser": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
+    "@angular/router": "^16.0.3",
+    "@ngneat/until-destroy": "9.2.3",
+    "@ngrx/entity": "16.0.0",
+    "@ngrx/store": "16.0.0",
+    "@ngrx/effects": "16.0.0",
+    "bootstrap": "5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0",
-    "bootstrap": "5.2.3",
-    "@ngrx/store": "15.4.0",
-    "@ngrx/entity": "15.4.0",
-    "@ngneat/until-destroy": "9.2.3"
+    "json-server": "0.17.3",
+    "concurrently": "8.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.3",
-    "@angular/cli": "~15.2.3",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "16.0.3",
+    "@angular-devkit/core": "16.0.3",
+    "@angular-devkit/schematics": "16.0.3",
+    "@angular-eslint/eslint-plugin": "16.0.2",
+    "@angular-eslint/eslint-plugin-template": "16.0.2",
+    "@angular-eslint/template-parser": "16.0.2",
+    "@angular/cli": "16.0.3",
+    "@angular/compiler-cli": "^16.0.3",
+    "@angular/language-service": "^16.0.3",
+    "@ngrx/store-devtools": "16.0.0",
+    "@nx/angular": "16.2.2",
+    "@nx/eslint-plugin": "16.2.2",
+    "@nx/jest": "16.2.2",
+    "@nx/js": "16.2.2",
+    "@nx/linter": "16.2.2",
+    "@nx/workspace": "16.2.2",
+    "@schematics/angular": "16.0.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~4.5.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~13.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4",
-    "@ngrx/store-devtools": "15.4.0"
+    "nx": "16.2.2",
+    "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.0.2"
   }
 }
