--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,11 @@
           "error",
           {
             "enforceBuildableLibDependency": true,
-            "allow": [],
+            "allow": [
+              "@doable/core-state",
+              "@doable/core-data",
+              "@env/environment"
+            ],
             "depConstraints": [
               {
                 "sourceTag": "*",
