--- a/apps/doable/project.json
+++ b/apps/doable/project.json
@@ -80,11 +80,12 @@
       }
     },
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@angular-devkit/build-angular:karma",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/doable/jest.config.ts",
-        "passWithNoTests": true
+        "tsConfig": "apps/doable/tsconfig.spec.json",
+        "karmaConfig": "karma.conf.js",
+        "polyfills": ["zone.js", "zone.js/testing"]
       },
       "configurations": {
         "ci": {
