--- a/apps/doable/tsconfig.spec.json
+++ b/apps/doable/tsconfig.spec.json
@@ -2,14 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "target": "es2016",
-    "types": ["jest", "node"]
+    "types": ["jasmine"]
   },
-  "files": ["src/test-setup.ts"],
   "include": [
-    "jest.config.ts",
-    "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
