--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@angular/platform-browser-dynamic": "^16.0.3",
     "@angular/router": "^16.0.3",
     "@ngneat/until-destroy": "9.2.3",
+    "@ngrx/effects": "16.0.0",
     "@ngrx/entity": "16.0.0",
     "@ngrx/store": "16.0.0",
-    "@ngrx/effects": "16.0.0",
     "bootstrap": "5.2.3",
+    "concurrently": "8.0.1",
+    "json-server": "0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "json-server": "0.17.3",
-    "concurrently": "8.0.1"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.0.3",
@@ -41,6 +41,8 @@
     "@angular/cli": "16.0.3",
     "@angular/compiler-cli": "^16.0.3",
     "@angular/language-service": "^16.0.3",
+    "@ngneat/spectator": "15.0.1",
+    "ng-mocks": "14.11.0",
     "@ngrx/store-devtools": "16.0.0",
     "@nx/angular": "16.2.2",
     "@nx/eslint-plugin": "16.2.2",
@@ -50,16 +52,13 @@
     "@nx/workspace": "16.2.2",
     "@schematics/angular": "16.0.3",
     "@types/jasmine": "~4.3.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "20.4.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~4.5.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~13.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
@@ -68,7 +67,6 @@
     "nx": "16.2.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2"
   }
