--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doable",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "nx serve",
@@ -24,7 +24,8 @@
     "@ngrx/effects": "16.0.0",
     "@ngrx/entity": "16.0.0",
     "@ngrx/store": "16.0.0",
-    "bootstrap": "5.2.3",
+    "bootstrap": "5.3.1",
+    "bootstrap-icons": "1.10.5",
     "concurrently": "8.0.1",
     "json-server": "0.17.3",
     "rxjs": "~7.8.0",
