--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular/animations": "^16.0.3",
     "@angular/common": "^16.0.3",
+    "@angular/cdk": "^16.0.3",
     "@angular/compiler": "^16.0.3",
     "@angular/core": "^16.0.3",
     "@angular/forms": "^16.0.3",
